--- a/laravel-worker/laravel-worker.conf
+++ b/laravel-worker/laravel-worker.conf
@@ -1,12 +1,51 @@
-[program:laravel-worker]
+[supervisord]
+logfile = /tmp/supervisord.log
+[program:laravel_worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /home/shikha/orderExport/artisan queue:work sqs --sleep=3 --tries=3 
+command=php /usr/src/phpapp/artisan queue:work  --sleep=3 --tries=3 --timeout=90000
 autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
-user=root
+user=daemon
 numprocs=8
 redirect_stderr=true
-stdout_logfile=/home/shikha/orderExport/worker.log
-stopwaitsecs=3600                      
+stdout_logfile=/usr/src/phpapp/worker.log
+stopwaitsecs=3600        
+
+
+[unix_http_server]
+file=/run/supervisord.sock  ; the path to the socket file
+
+
+[supervisord]                                                                         
+logfile=/var/log/supervisord.log ; main log file; default $CWD/supervisord.log   
+nodaemon=true                   ; start in foreground if true; default false
+
+                   
+                                                                                              
+[rpcinterface:supervisor]                                                                     
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface              
+                                                             
+                                                                                              
+[supervisorctl]                                                                               
+serverurl=unix:///run/supervisord.sock ; use a unix:// URL for a unix socket                  
+
+
+
+[eventlistener:theeventlistenername]                                                         
+command=php /usr/src/phpapp/artisan queue:work  --sleep=3 --tries=3   --timeout=90000 ; the program (relative uses PATH, can take args)              
+process_name=%(program_name)s_%(process_num)02d ; process_name expr (default %(program_name)s)                 
+numprocs=8                   ; number of processes copies to start (def 1)                  
+events=EVENT                  ; event notif. types to subscribe to (req'd)                   
+buffer_size=100                ; event buffer queue size (default 10)                         
+autostart=true                ; start at supervisord start (default: true)                   
+autorestart=true        ; autorestart if exited after running (def: unexpected)        
+stopwaitsecs=3600              ; max num secs to wait b4 SIGKILL (default 10)                 
+stopasgroup=true             ; send stop signal to the UNIX process group (default false)   
+killasgroup=true             ; SIGKILL the UNIX process group (def false)                   
+;user=chrism                   ; setuid to this UNIX account to run the program            
+                                                                                              
+                                                                                                                                                          
+[include]                                                                                     
+files = /etc/supervisor.d/*.ini
